# StrategyBuilder

./: .gitignore  KNOWLEDGE_BASE.md  Makefile  README.md  RESEARCH_NOTES.md  RESEARCH_STORY.md  implement_strategies.py  pyproject.toml  stocks.db  strategy_runner.py
GUI/: gui.py
Quant/: backtest.py  portfolio_optimizer.py  run_strategies.py  utils.py
algos/: Bollinger.py  GoldenCross.py  SMA200.py  SMA50.py
catalyst/: pokersim.py
combinator/: cleanTable.py  printTable.py
quark/: config.py  universe.py
quarkFix/: cleanDuplicatesDaily.py  cleanDuplicatesSharpe.py  quarkTester.py
reports/: baseline_daily_returns.csv  baselines.csv  baselines_meta.json  crypto_cycle1.csv  crypto_cycle2.csv  cycle10a_broad.csv  cycle11_insider.csv  cycle12_construction.csv  cycle13_multiasset.csv  cycle13_returns.csv  cycle2_pit_partial.csv  cycle3_earnings.csv  cycle4_fundamentals.csv  cycle5_slowprobe.csv  cycle6_blend.csv  cycle7_suehistory.csv  cycle8_ablation.csv  cycle9_walkforward.csv  cycle9_wf_returns.csv  deep_research_backtest_method_2026-07-24.md  deep_research_edges_2026-07-23.md  deep_research_engineering_2026-07-23.md  deep_research_families_2026-07-23.md  deep_research_masters_2026-07-23.md  deep_research_math_2026-07-23.md  deep_research_net_alpha_2026-07-22.md  deep_research_predmkt_2026-07-23.md  deep_research_predmkt_institutions_2026-07-23.md  deep_research_risk_2026-07-23.md  deep_research_wsb_method_2026-07-23.md  edge_archaeology.csv  ml_daily_returns.csv  ml_feature_importance.csv  ml_fold_stats.csv  ml_results.csv  partial_rebal_study.csv  pit_study.csv  (+13 more)
(+161 files in other folders)
